; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/postmaster/extr_pgstat.c_pgstat_setup_memcxt.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/postmaster/extr_pgstat.c_pgstat_setup_memcxt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pgStatLocalContext = common dso_local global i64 0, align 8
@TopMemoryContext = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"Statistics snapshot\00", align 1
@ALLOCSET_SMALL_SIZES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @pgstat_setup_memcxt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pgstat_setup_memcxt() #0 {
  %1 = load i64, i64* @pgStatLocalContext, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %7, label %3

3:                                                ; preds = %0
  %4 = load i32, i32* @TopMemoryContext, align 4
  %5 = load i32, i32* @ALLOCSET_SMALL_SIZES, align 4
  %6 = call i64 @AllocSetContextCreate(i32 %4, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %5)
  store i64 %6, i64* @pgStatLocalContext, align 8
  br label %7

7:                                                ; preds = %3, %0
  ret void
}

declare dso_local i64 @AllocSetContextCreate(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
